--- a/FimDelta/FimDelta.csproj
+++ b/FimDelta/FimDelta.csproj
@@ -68,6 +68,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DeltaViewController.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="ViewModel\AttributeNode.cs" />
     <Compile Include="ViewModel\GroupByNode.cs" />
     <Compile Include="ViewModel\INode.cs" />
@@ -102,16 +103,7 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
     <None Include="app.config" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
