--- a/FimDelta/app.config
+++ b/FimDelta/app.config
@@ -5,16 +5,7 @@
 			<section name="FimDelta.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
 		</sectionGroup>
 	</configSections>
-	<applicationSettings>
-		<FimDelta.Properties.Settings>
-			<setting name="DeltaFile" serializeAs="String">
-				<value>changes.xml</value>
-			</setting>
-			<setting name="SaveTo" serializeAs="String">
-				<value>changes2.xml</value>
-			</setting>
-		</FimDelta.Properties.Settings>
-	</applicationSettings>
+	<applicationSettings />
 	<startup>
 		<supportedRuntime version="v2.0.50727" sku="Client"/>
 	</startup>
